@@ -70,9 +70,11 @@ transform (void *c, const unsigned char *data);
 
 
 static void
-sha256_init (void *context)
+sha256_init (void *context, unsigned int flags)
 {
   SHA256_CONTEXT *hd = context;
+
+  (void)flags;
 
   hd->h0 = 0x6a09e667;
   hd->h1 = 0xbb67ae85;
@@ -96,9 +98,11 @@ sha256_init (void *context)
 
 
 static void
-sha224_init (void *context)
+sha224_init (void *context, unsigned int flags)
 {
   SHA256_CONTEXT *hd = context;
+
+  (void)flags;
 
   hd->h0 = 0xc1059ed8;
   hd->h1 = 0x367cd507;
